Fix statistics alignment

--- a/src/styles/layout-fixes.css
+++ b/src/styles/layout-fixes.css
@@ -585,25 +585,30 @@ main {
 
 .statistic-card > svg {
   flex-shrink: 0;
-  margin-bottom: 1rem;
-}
-
-.statistic-number {
-  font-size: 2.25rem;
-  font-weight: 700;
-  line-height: 1.2;
-  margin: 0.75rem 0 0.5rem 0;
-  color: hsl(var(--foreground));
+  height: 32px;
+  width: 32px;
+  margin-top: 0;
+  margin-bottom: 0;
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .statistic-label {
   font-size: 0.875rem;
   font-weight: 500;
   color: hsl(var(--foreground));
+  margin-top: 5rem;
   margin-bottom: 0.5rem;
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
+}
+
+.statistic-number {
+  font-size: 2.25rem;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 0.5rem 0;
+  color: hsl(var(--foreground));
 }
 
 .statistic-sublabel {
